--- a/src/adminPage.css
+++ b/src/adminPage.css
@@ -89,7 +89,7 @@ button:focus {
 
 #app {
 	margin: 0 auto;
-	max-width: 640px;
+	max-width: 840px;
 }
 
 .btn-danger{
@@ -128,6 +128,9 @@ button:focus {
 	padding-right: 1rem;
 	width: 5rem;
 	text-align: right;
+}
+.container label{
+	width: 7rem;
 }
 
 .form-group > input,
