--- a/src/adminPage.css
+++ b/src/adminPage.css
@@ -6,11 +6,11 @@
 }
 
 html {
-	font-size: 1rem;
+	font-size: 14px;
 }
 
-body{
-	margin-top: 100px;
+body {
+	margin-top: 10px;
 }
 
 table,
@@ -46,7 +46,7 @@ tr:nth-of-type(even) {
 	background: #eee
 }
 
-h1{
+h1 {
 	font-size: 1.5rem;
 	margin-bottom: 2rem;
 }
@@ -59,7 +59,6 @@ input[type=text] {
 	padding: 3px 6px;
 	font-size: 1.2rem;
 	border: 1px solid #ccc;
-
 }
 
 input[type=text]:focus {
@@ -74,9 +73,8 @@ button {
 	background: #0090d3;
 	color: #fff;
 	border: 1px solid #0090d3;
-	border-radius: 3px;	
+	border-radius: 3px;
 	outline: 0;
-
 	transition: .4s ease-out;
 }
 
@@ -87,32 +85,35 @@ button:focus {
 	transition: .15s ease-in;
 }
 
-#app {
-	margin: 0 auto;
-	max-width: 840px;
+template {
+	display: none;
 }
 
-.btn-danger{
+#app {
+	margin: 0 auto;
+	max-width: 700px;
+}
+
+.btn-danger {
 	padding: 5px 15px;
 	border: 1px solid salmon;
 	background: salmon;
 }
 
-.btn-save{
+.btn-save {
 	border: 1px solid #0090d3;
 	background: #0090d3;
 }
 
-.btn-close{
+.btn-close {
 	border: 1px solid #ccc;
 	background: #ccc;
 }
 
-
 .container {
 	padding-left: 15px;
 	padding-right: 15px;
-	margin: 10px;
+	margin: 20px;
 }
 
 .search-input {
@@ -126,11 +127,8 @@ button:focus {
 .form-group > label {
 	display: inline-block;
 	padding-right: 1rem;
-	width: 5rem;
+	width: 10rem;
 	text-align: right;
-}
-.container label{
-	width: 7rem;
 }
 
 .form-group > input,
@@ -148,7 +146,7 @@ button:focus {
 	width: 480px;
 	position: fixed;
 	left: 50%;
-	top: 2em;
+	top: 1.8em;
 	transform: translateX(-50%);
 	z-index: 2000;
 	visibility: hidden;
@@ -188,14 +186,19 @@ button:focus {
 
 .dialog-title {
 	margin: 0;
-	font-size: 2em;
+	font-size: 1.8em;
 	text-align: center;
 	font-weight: 200;
-	line-height: 2em;
+	line-height: 1.8em;
 }
 
 .dialog-body {
 	padding: 2em;
+}
+
+.dialog-body .error {
+	font-size: 1.2em;
+	color: salmon;
 }
 
 .dialog-footer {
@@ -216,4 +219,111 @@ button:focus {
 	opacity: 0;
 	background: rgba(0, 0, 0, 0.5);
 	transition: all .6s;
+}
+
+.close {
+	display: inline-block;
+	width: 2rem;
+	height: 2rem;
+	position: absolute;
+	top: .5rem;
+	right: .5rem;
+	transition: .8s ease all;
+	-moz-transition: .8s ease all;
+	-webkit-transition: .8s ease all;
+	border: none;
+	border-radius: 3px;
+	color: #333;
+	text-decoration: none;
+	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+}
+
+.close:hover {
+	transition: .8s ease all;
+	-moz-transition: .8s ease all;
+	-webkit-transition: .8s ease all;
+}
+
+.close .iconfont {
+	font-size: 2rem;
+	color: #fff;
+}
+
+.rotate {
+	cursor: pointer;
+}
+
+.rotate:hover {
+	transform: rotate(360deg);
+	-moz-transform: rotate(360deg);
+	-webkit-transform: rotate(360deg);
+	transition: transform 1.0s ease all;
+	-moz-transition: -moz-transform 1.0s ease all;
+	-webkit-transition: -webkit-transform 1.0s ease all;
+}
+
+.loading-overlay {
+	content: "";
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	z-index: 1000;
+	opacity: 1;
+	background: rgba(0, 0, 0, 0.5);
+	transition: all .6s;
+}
+
+.sk-three-bounce {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+}
+
+.sk-three-bounce .sk-child {
+	width: 20px;
+	height: 20px;
+	background-color: salmon;
+	border-radius: 100%;
+	display: inline-block;
+	-webkit-animation: sk-three-bounce 1.4s ease-in-out 0s infinite both;
+	animation: sk-three-bounce 1.4s ease-in-out 0s infinite both;
+}
+
+.sk-three-bounce .sk-bounce1 {
+	-webkit-animation-delay: -0.32s;
+	animation-delay: -0.32s;
+}
+
+.sk-three-bounce .sk-bounce2 {
+	-webkit-animation-delay: -0.16s;
+	animation-delay: -0.16s;
+}
+
+@-webkit-keyframes sk-three-bounce {
+	0%,
+	80%,
+	100% {
+		-webkit-transform: scale(0);
+		transform: scale(0);
+	}
+	40% {
+		-webkit-transform: scale(1);
+		transform: scale(1);
+	}
+}
+
+@keyframes sk-three-bounce {
+	0%,
+	80%,
+	100% {
+		-webkit-transform: scale(0);
+		transform: scale(0);
+	}
+	40% {
+		-webkit-transform: scale(1);
+		transform: scale(1);
+	}
 }
